Added a keybind to toggle the master sound level TODO: show on the screen what was done

--- a/src/main/resources/lang/en_us.json
+++ b/src/main/resources/lang/en_us.json
@@ -51,6 +51,7 @@
     "showItemAnvilUses": "Show Item Anvil Uses",
     "lockSlots": "Allow Locking Slots",
     "lockSlot": "Lock Slot",
+    "toggleSounds": "Toggle Mute All Sounds",
     "dontResetCursorInventory": "Don't Reset Cursor Between Inventories",
     "summoningEyeAlert": "Summoning Eye Alert",
     "makeEnderchestsInEndGreen": "Change Enderchest Color in the End",
